--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -8,34 +8,50 @@ html {
   background-color: $light;
 }
 
+.App {
+  max-height: 100vh;
+  box-sizing: border-box;
+  width: 1440px;
+  margin: auto;
+}
+
 p {
   font-size: 18px;
   color: $gray;
 }
 
 h1 {
-  font-size: 68px;
+  font-size: 80px;
+  line-height: 80px;
+  font-weight: 700;
+  letter-spacing: -1.11px;
 }
 
 .hero {
   display: flex;
   flex-direction: row;
-  margin: auto;
-  width: 1124px;
-  height: 80vh;
-  box-sizing: border-box;
+  margin: 130px auto;
+  height: fit-content;
   align-items: center;
   flex-wrap: wrap;
 
   div {
-    flex-basis: 50%;
-    flex-grow: 1;
+    flex: 1;
+    align-items: center;
+  }
+
+  p {
+    margin-top: 48px;
+    word-wrap: break-word;
+    max-width: 350px;
+    font-size: 18px;
+    line-height: 28px;
+    font-weight: 500;
   }
 
   .heroImg {
-    max-height: 80vh;
     justify-content: right;
-    max-height: auto;
+    width: 480px;
     justify-items: right;
   }
 
@@ -46,6 +62,7 @@ h1 {
     border-radius: 10px;
     font-size: 22px;
     border: solid 1px $dark;
+    margin-top: 51px;
 
     &:hover {
       cursor: pointer;
