--- a/src/scss/clients.module.scss
+++ b/src/scss/clients.module.scss
@@ -3,6 +3,21 @@
 .clients {
   display: flex;
   margin-top: 108px;
-  gap: 50px;
-  max-height: 35.9px;
+  align-items: center;
+}
+
+.data {
+  height: 20px;
+}
+
+.audio {
+  height: 35.9px;
+}
+
+.maker {
+  height: 24px;
+}
+
+.meet {
+  height: 20px;
 }
