--- a/src/css/app.css
+++ b/src/css/app.css
@@ -6,6 +6,7 @@ html {
 }
 
 .App {
+  position: relative;
   max-height: 100vh;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
