--- a/src/scss/topnav.module.scss
+++ b/src/scss/topnav.module.scss
@@ -8,13 +8,13 @@
   display: flex;
   width: 1440px;
   box-sizing: border-box;
-  margin: 20px auto;
+  margin: 34px auto;
   justify-items: center;
 
   .links {
     display: flex;
     margin: 0;
-    padding: 0 40px;
+    padding: 0 40px 0 62.24px;
 
     .link {
       list-style: none;
