--- a/src/css/clients.module.css
+++ b/src/css/clients.module.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Epilogue:wght@500;700&display=swap");
 .clients {
   display: -webkit-box;
   display: -ms-flexbox;
