--- a/src/scss/_var.scss
+++ b/src/scss/_var.scss
@@ -1,3 +1,5 @@
 $light: hsl(0, 0%, 98%);
 $gray: hsl(0, 0%, 41%);
 $dark: hsl(0, 0%, 8%);
+
+@import url("https://fonts.googleapis.com/css2?family=Epilogue:wght@500;700&display=swap");
