--- a/src/scss/topnav.module.scss
+++ b/src/scss/topnav.module.scss
@@ -30,11 +30,43 @@
     }
 
     .dropdown {
+      .dropmenu {
+        display: none;
+        position: absolute;
+        border-radius: 10px;
+        background-color: #ffffff;
+        box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.149126);
+        padding: 24px;
+        margin-top: 20px;
+        flex-direction: column;
+        gap: 16px;
+        transition: ease-in-out 3s;
+
+        .link {
+          list-style: none;
+          margin: 0;
+          padding: 0;
+        }
+      }
+
       &::after {
         padding-left: 5px;
         content: url("../assets/images/icon-arrow-down.svg");
       }
+
+      &:hover {
+        > .dropmenu {
+          display: flex;
+        }
+        &::after {
+          content: url("../assets/images/icon-arrow-up.svg");
+        }
+      }
     }
+  }
+
+  .menuImg {
+    padding-right: 15.59px;
   }
 
   .logo {
