--- a/src/css/app.css
+++ b/src/css/app.css
@@ -7,7 +7,6 @@ html {
 
 .App {
   position: relative;
-  max-height: 100vh;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   width: 1440px;
@@ -43,6 +42,7 @@ h1 {
           align-items: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  position: relative;
 }
 
 .hero div {
@@ -64,11 +64,7 @@ h1 {
 }
 
 .hero .heroImg {
-  -webkit-box-pack: right;
-      -ms-flex-pack: right;
-          justify-content: right;
   width: 480px;
-  justify-items: right;
 }
 
 .hero .btn {
