--- a/src/css/topnav.module.css
+++ b/src/css/topnav.module.css
@@ -3,7 +3,6 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  max-height: 50px;
   width: 1440px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -73,5 +72,11 @@
   border: solid 1px #141414;
   color: #141414;
   cursor: pointer;
+}
+
+@media only screen and (max-width: 375px) {
+  .topnav {
+    display: none;
+  }
 }
 /*# sourceMappingURL=topnav.module.css.map */
