--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -10,7 +10,6 @@ html {
 
 .App {
   position: relative;
-  max-height: 100vh;
   box-sizing: border-box;
   width: 1440px;
   margin: auto;
@@ -35,6 +34,7 @@ h1 {
   height: fit-content;
   align-items: center;
   flex-wrap: wrap;
+  position: relative;
 
   div {
     flex: 1;
@@ -51,9 +51,7 @@ h1 {
   }
 
   .heroImg {
-    justify-content: right;
     width: 480px;
-    justify-items: right;
   }
 
   .btn {
