--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -1,11 +1,13 @@
 @mixin devices($breakpoint) {
+  //the name of the mixin is devices
+
   @if $breakpoint == tablet {
     @media only screen and (max-width: 680px) {
       @content;
     }
   }
 
-  @if device($breakpoint) {
+  @if $breakpoint == mobile {
     @media only screen and (max-width: 375px) {
       @content;
     }
