--- a/src/scss/topnav.module.scss
+++ b/src/scss/topnav.module.scss
@@ -6,15 +6,18 @@
 .topnav {
   position: relative;
   display: flex;
-  width: 1440px;
+  max-width: 1440px;
   box-sizing: border-box;
   margin: 34px auto;
   justify-items: center;
+  align-items: center;
+  padding: 0 20px;
 
   .links {
     display: flex;
     margin: 0;
     padding: 0 40px 0 62.24px;
+    align-items: center;
 
     .link {
       list-style: none;
@@ -109,7 +112,10 @@
       }
     }
   }
-  @include devices(mobile) {
+}
+
+@media (max-width: 767px) {
+  .topnav {
     display: none;
   }
 }
