--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,4 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Epilogue:wght@500;700&display=swap");
+* {
+  padding: 0;
+  margin: 0;
+}
+
 body,
 html {
   margin: 0;
@@ -64,9 +69,12 @@ h1 {
 }
 
 .hero .heroImg {
-  width: 480px;
-  display: block;
+  max-width: 480px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   margin: auto;
+  max-height: 100%;
 }
 
 .hero .btn {
@@ -95,13 +103,11 @@ h1 {
     margin: 0;
     padding: 0;
     text-align: center;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
   }
   .heroImg {
-    max-width: -webkit-fit-content;
-    max-width: -moz-fit-content;
-    max-width: fit-content;
-    padding: 0;
-    margin: 0;
+    max-width: 100%;
   }
   h1 {
     font-size: 36px;
