--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,6 +1,11 @@
 // Imports
 @import "_var.scss";
 
+* {
+  padding: 0;
+  margin: 0;
+}
+
 body,
 html {
   margin: 0;
@@ -52,9 +57,10 @@ h1 {
   }
 
   .heroImg {
-    width: 480px;
-    display: block;
+    max-width: 480px;
+    display: flex;
     margin: auto;
+    max-height: 100%;
   }
 
   .btn {
@@ -81,12 +87,11 @@ h1 {
     margin: 0;
     padding: 0;
     text-align: center;
+    flex-wrap: nowrap;
   }
 
   .heroImg {
-    max-width: fit-content;
-    padding: 0;
-    margin: 0;
+    max-width: 100%;
   }
 
   h1 {
