--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Epilogue:wght@500;700&display=swap");
 * {
-  padding: 0;
-  margin: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body,
@@ -120,5 +120,24 @@ h1 {
     font-size: 16px;
     margin: auto;
   }
+}
+
+footer {
+  padding: 20px 10px;
+  text-align: center;
+  width: 100%;
+}
+
+footer p {
+  font-size: 11px;
+}
+
+footer a {
+  font-size: 11px;
+  color: #141414;
+}
+
+footer a:hover {
+  color: dimgray;
 }
 /*# sourceMappingURL=app.css.map */
