--- a/src/css/mobileMenu.module.css
+++ b/src/css/mobileMenu.module.css
@@ -1,8 +1,60 @@
 @import url("https://fonts.googleapis.com/css2?family=Epilogue:wght@500;700&display=swap");
 .menu {
   display: none;
+  position: relative;
+}
+
+@media (max-width: 767px) {
+  .menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+.links {
+  display: none;
+}
+
+.logo {
+  height: 35px;
+  width: 87;
+}
+
+@media (max-width: 767px) {
+  .menuInner {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    justify-items: center;
+    width: 100%;
+    margin: 16px 16px 24px 16px;
+  }
+}
+
+.burgerMenu {
+  width: 32px;
+  height: 18px;
+}
+
+.burgerMenu:hover {
+  cursor: pointer;
+}
+
+.burgerMenu:hover > .links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   position: absolute;
   right: 0;
   top: 0;
+  height: 100vh;
+  width: 240px;
 }
 /*# sourceMappingURL=mobileMenu.module.css.map */
