--- a/src/scss/mobileMenu.module.scss
+++ b/src/scss/mobileMenu.module.scss
@@ -3,7 +3,46 @@
 
 .menu {
   display: none;
-  position: absolute;
-  right: 0;
-  top: 0;
+  position: relative;
+
+  @media (max-width: 767px) {
+    display: flex;
+  }
+}
+
+.links {
+  display: none;
+}
+
+.logo {
+  height: 35px;
+  width: 87;
+}
+
+.menuInner {
+  @media (max-width: 767px) {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    justify-items: center;
+    width: 100%;
+    margin: 16px 16px 24px 16px;
+  }
+}
+
+.burgerMenu {
+  width: 32px;
+  height: 18px;
+
+  &:hover {
+    > .links {
+      display: flex;
+      position: absolute;
+      right: 0;
+      top: 0;
+      height: 100vh;
+      width: 240px;
+    }
+    cursor: pointer;
+  }
 }
